# webp

./: .gitattributes  .gitignore  .travis.yml  LICENSE  README.md  bench_test.go  capi.c  capi.go  capi.h  capi_nocgo.go  cbuffer.go  cbuffer_example_test.go  cgo.go  cgo_go12.go  cgo_go13.go  doc.go  gen.go  gen_helper.go  go.mod  go.sum  hello.go  helloV2.go  helloV3.go  image.go  image_color.go  image_example_test.go  image_pix_slice.go  reader.go  reader_example_test.go  reader_nocgo.go  reader_test.go  rgb.go  rgb48.go  testing_test.go  webp.go  webp.h  webp_api.c  webp_dec.c  webp_decode.go  webp_decode_test.go  (+214 more)
.github/workflows/: test.yml
bench/: README.md  bench.go  benchmark.gnuplot  benchmark_result_chai2010_webp.txt  benchmark_result_chai2010_webp_cbuf.txt  benchmark_result_x_image_webp.txt  benchmark_test.go  gen.go  x_benchmark_test.go  z_benchmark_test.go
cfiles/: z_libwebp_src_dec_io_dec.c  z_libwebp_src_dec_tree_dec.c  z_libwebp_src_dsp_alpha_processing_neon.c  z_libwebp_src_dsp_alpha_processing_sse2.c  z_libwebp_src_dsp_alpha_processing_sse41.c  z_libwebp_src_dsp_dec_sse2.c  z_libwebp_src_dsp_dec_sse41.c  z_libwebp_src_dsp_enc_mips32.c  z_libwebp_src_dsp_enc_msa.c  z_libwebp_src_dsp_filters_mips_dsp_r2.c  z_libwebp_src_dsp_lossless_enc_mips32.c  z_libwebp_src_dsp_lossless_enc_mips_dsp_r2.c  z_libwebp_src_dsp_lossless_mips_dsp_r2.c  z_libwebp_src_dsp_rescaler_mips32.c  z_libwebp_src_dsp_rescaler_neon.c  z_libwebp_src_dsp_yuv.c  z_libwebp_src_dsp_yuv_mips32.c  z_libwebp_src_dsp_yuv_mips_dsp_r2.c  z_libwebp_src_dsp_yuv_sse41.c  z_libwebp_src_enc_frame_enc.c  z_libwebp_src_enc_iterator_enc.c  z_libwebp_src_enc_picture_tools_enc.c  z_libwebp_src_enc_quant_enc.c  z_libwebp_src_enc_vp8l_enc.c  z_libwebp_src_mux_anim_encode.c  z_libwebp_src_utils_bit_reader_utils.c  z_libwebp_src_utils_filters_utils.c  z_libwebp_src_utils_huffman_encode_utils.c  z_libwebp_src_utils_random_utils.c
convertor/: webp.go  webp_test.go
decoder/: decoder.go  decoder_test.go  gen.go  gen_helper.go  options.go  options_test.go
encoder/: encoder.go  encoder_test.go  gen.go  options.go  options_test.go  z_libwebp_sharpyuv_sharpyuv_cpu.c  z_libwebp_src_dec_alpha_dec.c  z_libwebp_src_dec_buffer_dec.c  z_libwebp_src_demux_anim_decode.c  z_libwebp_src_dsp_dec.c  z_libwebp_src_dsp_dec_clip_tables.c  z_libwebp_src_dsp_dec_mips32.c  z_libwebp_src_dsp_filters_neon.c  z_libwebp_src_dsp_lossless_enc_neon.c  z_libwebp_src_dsp_lossless_msa.c  z_libwebp_src_dsp_rescaler_msa.c  z_libwebp_src_enc_alpha_enc.c  z_libwebp_src_enc_histogram_enc.c  z_libwebp_src_enc_picture_csp_enc.c  z_libwebp_src_enc_picture_enc.c  z_libwebp_src_enc_picture_psnr_enc.c  z_libwebp_src_enc_webp_enc.c  z_libwebp_src_mux_muxinternal.c  z_libwebp_src_utils_quant_levels_utils.c  z_libwebp_src_utils_thread_utils.c
fuzz/: webp_fuzz.go
internal/assert/: README.md  assert.go  assert_failed_test.go  example_test.go  gen.go  gen_helper.go
internal/include/: webp.h
internal/libwebp/: CMakeLists.txt
internal/libwebp-0.5.0/: .gitignore  CMakeLists.txt  build-debug-proj-mt.bat
internal/libwebp-0.5.0/include/: webp.h
internal/libwebp-0.5.0/test/: test_util_jpg.cc  webp_test.cc
internal/libwebp-1.0.2/src/enc/: picture_csp_enc.c
internal/libwebp-1.3.2/: CMakeLists.txt  Makefile.in  configure
internal/libwebp-1.3.2/extras/: Makefile.in
internal/libwebp-1.3.2/imageio/: Makefile.in
internal/libwebp-1.3.2/man/: Makefile.in
internal/libwebp-1.3.2/src/enc/: picture_csp_enc.c
internal/libwebp-1.4.0/: configure  ltmain.sh
internal/libwebp-1.4.0/examples/: Makefile.in
internal/libwebp-1.4.0/extras/: Makefile.in
internal/libwebp-1.4.0/sharpyuv/: Makefile.in
internal/libwebp-1.4.0/src/: Makefile.in
internal/libwebp-1.4.0/src/demux/: Makefile.in
internal/libwebp-1.4.0/src/mux/: Makefile.in
internal/libwebp-1.4.0/src/utils/: Makefile.in
internal/libwebp/demo/: demo.cc
internal/libwebp/include/: webp.h
internal/libwebp/src/: webp.c  webp_mux.c  webp_utils_dec.c
internal/libwebp/src/enc/: config.c
internal/libwebp/test/: test.h  test_util.cc  test_util_png.cc
internal/libwebp/test/jpeg/: stb_image.c  tga2jpg.cpp
internal/riff/: example_test.go
internal/src/: CMakeLists.txt  webp.c
internal/webp/: decode.go  decode_test.go
libwebp/: CMakeLists.txt  build-debug-proj-mt.bat  build.bat
libwebp/demo/: demo.cc
libwebp/examples/: Makefile.in
libwebp/src/: webp_dec.c  webp_demux.c  webp_dsp_dec.c  webp_dsp_enc.c  webp_enc.c  webp_utils_dec.c  webp_utils_enc.c
libwebp/test/: test.cc  test_util.h  webp_bench_test.cc
test/: bench_test.go  writer_test.go
utils/: vp8.go  webp.go
